[gd_scene load_steps=10 format=3 uid="uid://2lmuc3ly88ef"]

[ext_resource type="Script" path="res://scenes/obstacles/simple_obstacle/simple_obstacle.gd" id="1_xm8uq"]
[ext_resource type="Texture2D" uid="uid://bh1co162g3rac" path="res://assets/obstacles/simple_obstacle.svg" id="2_3ur1w"]
[ext_resource type="Material" uid="uid://cnwjgtsn35brg" path="res://scenes/obstacles/simple_obstacle/simple_obstacle_shader.tres" id="2_axbbd"]
[ext_resource type="AudioStream" uid="uid://c04dqnyok5emw" path="res://notmine/sounds/point_sounds/mouth pop 1.wav" id="4_p2t4m"]
[ext_resource type="AudioStream" uid="uid://yf63w7bpnm6b" path="res://notmine/sounds/point_sounds/mouth pop 2.wav" id="5_chtn0"]
[ext_resource type="AudioStream" uid="uid://clxa0pdt4yst5" path="res://notmine/sounds/point_sounds/mouth pop 3.wav" id="6_85171"]
[ext_resource type="AudioStream" uid="uid://dpxn5x4ugcbje" path="res://notmine/sounds/point_sounds/mouth pop 4.wav" id="7_eq0u4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yuxmx"]
size = Vector2(196, 1004.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_stoqf"]
size = Vector2(88, 2448)

[node name="SimpleObstacle" type="Node2D" groups=["SimpleObstacles"]]
script = ExtResource("1_xm8uq")

[node name="UpColumn" type="StaticBody2D" parent="."]
position = Vector2(0, 200)

[node name="Sprite2D" type="Sprite2D" parent="UpColumn"]
material = ExtResource("2_axbbd")
position = Vector2(1, -289)
texture = ExtResource("2_3ur1w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpColumn"]
position = Vector2(-1, -288.5)
shape = SubResource("RectangleShape2D_yuxmx")

[node name="DownColumn" type="StaticBody2D" parent="."]
position = Vector2(0, 1000)

[node name="Sprite2D" type="Sprite2D" parent="DownColumn"]
material = ExtResource("2_axbbd")
position = Vector2(1, 250)
texture = ExtResource("2_3ur1w")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DownColumn"]
position = Vector2(1, 255.25)
shape = SubResource("RectangleShape2D_yuxmx")

[node name="ScoreArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2(0, 531)
shape = SubResource("RectangleShape2D_stoqf")

[node name="Sounds" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("4_p2t4m")
volume_db = -8.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("5_chtn0")
volume_db = -8.0

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("6_85171")
volume_db = -8.0

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("7_eq0u4")
volume_db = -8.0

[connection signal="body_entered" from="ScoreArea" to="." method="_on_score_area_body_entered"]
